[gd_scene load_steps=24 format=3 uid="uid://b1q7brpw8cc2p"]

[ext_resource type="StyleBox" uid="uid://dv72od2tskfeh" path="res://Theme/DarkBluePanel.tres" id="1_762dg"]
[ext_resource type="Script" path="res://Scripts/DroneTab.gd" id="1_v0de6"]
[ext_resource type="Resource" uid="uid://daboq4ltk4k55" path="res://Resources/DroneDockEventH.tres" id="2_35lsn"]
[ext_resource type="Theme" uid="uid://cgma68ateq86o" path="res://Theme/DarkBlueButton.tres" id="2_xe1ep"]
[ext_resource type="BitMap" uid="uid://ce2ule7t3nylb" path="res://Assets/plane_Wheel_BaseColorMaskSmol.png" id="5_vvi5k"]
[ext_resource type="Texture2D" uid="uid://brrfictufcbr6" path="res://Assets/UIPiecies/steer_Camera 1.png" id="6_oohfm"]
[ext_resource type="AudioStream" uid="uid://bw32ea80qadx8" path="res://Assets/Sounds/MetalClick.mp3" id="8_nr8c2"]
[ext_resource type="PackedScene" uid="uid://bl1t8w4ot467w" path="res://Scenes/AnimatedButton.tscn" id="10_igd2c"]
[ext_resource type="Texture2D" uid="uid://bj2r2y882vpmo" path="res://Assets/UIPiecies/dissarmButton_Camera 1.png" id="11_fddnp"]
[ext_resource type="FontFile" uid="uid://by0ihctjvtjh2" path="res://Fonts/Caudex-Regular.ttf" id="11_k3wxo"]
[ext_resource type="Texture2D" uid="uid://bjkm8sbw8g0st" path="res://Assets/UIPiecies/dissarm_on_Camera 1.png" id="12_xg6ex"]
[ext_resource type="Texture2D" uid="uid://38xapu6ybfup" path="res://Assets/UIPiecies/Launchbutton_Camera 1.png" id="13_v6wfp"]
[ext_resource type="Texture2D" uid="uid://c4typshdm7o6m" path="res://Assets/UIPiecies/launchbuttonon_Camera 1.png" id="14_mrkf2"]
[ext_resource type="Texture2D" uid="uid://dw307mqrdgntf" path="res://Assets/UIPiecies/dronetab_Camera 1.png" id="15_43a6j"]
[ext_resource type="Texture2D" uid="uid://cfqj4sicmtmfi" path="res://Assets/UIPiecies/offbutton_Camera 1.png" id="15_n75nu"]
[ext_resource type="Texture2D" uid="uid://ckuoofhsmdwhc" path="res://Assets/UIPiecies/offbuttonon_Camera 1.png" id="16_moali"]
[ext_resource type="PackedScene" uid="uid://ckhssy2ej85mq" path="res://Scenes/AnimatedDroneGas.tscn" id="17_hhbqw"]

[sub_resource type="Animation" id="Animation_brgwl"]
resource_name = "Hide"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 163)]
}

[sub_resource type="Animation" id="Animation_uci4u"]
resource_name = "HideSteer"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Node2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(21, -82), Vector2(21, 34)]
}

[sub_resource type="Animation" id="Animation_wlayh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 163)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Node2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(21, 178)]
}

[sub_resource type="Animation" id="Animation_stsyt"]
resource_name = "Show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 163), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_6inlh"]
resource_name = "ShowSteer"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Node2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(21, 29), Vector2(21, -82)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kt4fa"]
_data = {
"Hide": SubResource("Animation_brgwl"),
"HideSteer": SubResource("Animation_uci4u"),
"RESET": SubResource("Animation_wlayh"),
"Show": SubResource("Animation_stsyt"),
"ShowSteer": SubResource("Animation_6inlh")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
script = ExtResource("1_v0de6")
DroneDockEventH = ExtResource("2_35lsn")

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -56.0
offset_right = 183.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = ExtResource("1_762dg")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer2"]
layout_mode = 2

[node name="ToggleDroneTab" type="Button" parent="PanelContainer2/VBoxContainer" groups=["Buttons"]]
texture_filter = 6
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_xe1ep")
theme_override_font_sizes/font_size = 16
text = "Deploy Drone
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kt4fa")
}

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = 123.0
offset_right = 20.0
offset_bottom = 163.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="Node2D" type="Control" parent="Control"]
anchors_preset = 0
offset_left = 21.0
offset_top = 178.0
offset_right = 21.0
offset_bottom = 178.0

[node name="TextureButton" type="TextureButton" parent="Control/Node2D"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
action_mode = 0
texture_click_mask = ExtResource("5_vvi5k")

[node name="Sprite2D" type="TextureRect" parent="Control/Node2D"]
texture_filter = 6
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(128, 128)
mouse_filter = 2
texture = ExtResource("6_oohfm")
expand_mode = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Control/Node2D"]
stream = ExtResource("8_nr8c2")
volume_db = -15.0
pitch_scale = 0.76
bus = &"MapSounds"

[node name="Control" type="Control" parent="Control"]
layout_mode = 2
anchors_preset = 0
offset_left = 20.0
offset_top = -34.0
offset_right = 20.0
offset_bottom = -34.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="Control/Control"]
layout_mode = 0
offset_left = -289.0
offset_top = -90.0
offset_right = 182.0
offset_bottom = 74.0
texture = ExtResource("15_43a6j")
expand_mode = 1

[node name="Label" type="Label" parent="Control/Control"]
texture_filter = 6
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
offset_left = -180.0
offset_top = 13.0
offset_right = -56.0
offset_bottom = 55.0
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("11_k3wxo")
text = "Fuel Cost : 0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Arm" parent="Control/Control" instance=ExtResource("10_igd2c")]
layout_mode = 1
offset_left = -161.0
offset_top = -81.0
offset_right = -53.0
offset_bottom = -48.0

[node name="Dissarm" parent="Control/Control" instance=ExtResource("10_igd2c")]
layout_mode = 1
offset_left = -161.0
offset_top = -36.0
offset_right = -53.0
offset_bottom = -3.0
toggle_mode = false
texture_pressed = ExtResource("12_xg6ex")
OffTexture = ExtResource("11_fddnp")
OnTexture = ExtResource("12_xg6ex")

[node name="Launch" parent="Control/Control" instance=ExtResource("10_igd2c")]
layout_mode = 1
offset_left = -18.0
offset_top = -5.0
offset_right = 82.0
offset_bottom = 52.0
toggle_mode = false
texture_pressed = ExtResource("14_mrkf2")
OffTexture = ExtResource("13_v6wfp")
OnTexture = ExtResource("14_mrkf2")

[node name="off" parent="Control/Control" instance=ExtResource("10_igd2c")]
layout_mode = 1
offset_left = 107.0
offset_top = -5.0
offset_right = 169.0
offset_bottom = 52.0
toggle_mode = false
texture_pressed = ExtResource("16_moali")
OffTexture = ExtResource("15_n75nu")
OnTexture = ExtResource("16_moali")

[node name="DroneGas" parent="Control/Control" instance=ExtResource("17_hhbqw")]
position = Vector2(72, -54)
scale = Vector2(0.799999, 0.799999)

[node name="TouchStopper" type="Control" parent="Control"]
layout_mode = 2
anchors_preset = 0
offset_left = -156.0
offset_top = -121.0
offset_right = 198.0
offset_bottom = 35.0

[connection signal="pressed" from="PanelContainer2/VBoxContainer/ToggleDroneTab" to="." method="_on_toggle_drone_tab_pressed"]
[connection signal="gui_input" from="Control/Node2D/TextureButton" to="." method="_on_area_2d_input_event"]
[connection signal="toggled" from="Control/Control/Arm" to="." method="_on_arm_drone_button_pressed"]
[connection signal="pressed" from="Control/Control/Dissarm" to="." method="_on_dissarm_drone_button_2_pressed"]
[connection signal="toggled" from="Control/Control/Dissarm" to="." method="_on_arm_drone_button_pressed"]
[connection signal="pressed" from="Control/Control/Launch" to="." method="_on_deploy_drone_button_pressed"]
[connection signal="pressed" from="Control/Control/off" to="." method="_on_turn_off_button_pressed"]
[connection signal="RangeChanged" from="Control/Control/DroneGas" to="." method="UpdateDroneRange"]
